<resources>
    <string name="app_name">Popular Movies</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_details">Movie Details</string>

    <string name="action_share_trailer">Share Trailer</string>
    <string name="action_settings">Settings</string>
    <string name="pref_title">Sort Movies By:</string>
    <string name="pref_summary">Select the sorting order for the movies</string>
    <string name="pref_sort_key">sortKey</string>
    <string name="pref_sort_order_default_value">popularity.desc</string>
    <string name="pref_category_title">Popular Movie Preferences</string>

    <string name="sort_array_item_1">Popularity</string>
    <string name="sort_array_item_2">Rating</string>
    <string name="sort_array_item_3">Favorites</string>
    <string name="sort_array_item_1_value">popularity.desc</string>
    <string name="sort_array_item_2_value">vote_average.desc</string>
    <string name="sort_array_item_3_value">favorites</string>
    <string name="pref_votes_title">Minimum Votes</string>
    <string name="pref_votes_summary">Include only Movies that have at least this many votes</string>
    <string name="pref_votes_key">votesKey</string>
    <string name="pref_votes_default_value">10</string>

    <string name="add_to_favorites">Add to Favorites</string>
    <string name="empty_details">Details Currently Unavailable</string>
</resources>
