<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_category_title">

        <ListPreference
            android:title="@string/pref_title"
            android:summary="@string/pref_summary"
            android:key="@string/pref_sort_key"
            android:defaultValue="@string/pref_sort_order_default_value"
            android:entries="@array/sortArray"
            android:entryValues="@array/sortArrayValues" />

        <!-- I want to change this to a spinner later I think, right now it's  just a quick implementation... -->
        <ListPreference
            android:title="@string/pref_votes_title"
            android:summary="@string/pref_votes_summary"
            android:key="@string/pref_votes_key"
            android:defaultValue="@string/pref_votes_default_value"
            android:entries="@array/votesArray"
            android:entryValues="@array/votesArrayValues" />

    </PreferenceCategory>

</PreferenceScreen>